--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,49 @@
 <resources>
     <string name="app_name">pelikanj</string>
-    <string name="title_scanner">Čtečka</string>
-    <string name="title_profile">Profil</string>
-    <string name="title_more">Více</string>
-    <string name="title_institutions">Instituce</string>
-    <string name="prompt_username">Username</string>
-    <string name="prompt_password">Password</string>
-    <string name="register">Register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="login_failed">"Login failed"</string>
-    <string name="login_baner">Přihlašení</string>
-    <string name="building">building</string>
-    <string name="list_of_institutions">List of institutions</string>
+    <string name="title_scanner_fragment">Čtečka</string>
+    <string name="title_profile_fragment">Profil</string>
+    <string name="title_more_fragment">Více</string>
+    <string name="title_institutions_fragment">Instituce</string>
+    <string name="username">Uživatelské jméno</string>
+    <string name="password">Heslo</string>
+    <string name="register">Registrace</string>
+    <string name="sign_in">Přihlásit se</string>
+    <string name="login_failed">Přihlášení se nezdařilo</string>
+    <string name="login_banner">Přihlašení</string>
+    <string name="building">Budova</string>
+    <string name="list_of_institutions">Seznam institucí</string>
+    <string name="about_us">O nás</string>
+    <string name="email">E-mail</string>
+    <string name="logout">Odhlásit se</string>
+    <string name="language_settings">Nastavení jazyka</string>
+    <string name="password_again">Heslo znovu</string>
+    <string name="send_exhibit">Pošli exponát</string>
+    <string name="become_translator">Stát se překladatelem</string>
+    <string name="name_of_exhibit">Jméno exponátu</string>
+    <string name="exhibit_info_label">Text o exponátu</string>
+    <string name="image_with_exhibit_info_label">Obrázek s textem k exponátu</string>
+    <string name="building_name_or_number">Jméno/číslo budovy</string>
+    <string name="room_number">Jméno/číslo místnosti</string>
+    <string name="showcase_name_or_number">Jméno/číslo vytrýny</string>
+    <string name="requiredNameOfExhibit">Jméno exponátu musí být vyplněno</string>
+    <string name="requiredNameOfBuilding">Jméno budovy musí být vyplněno</string>
+    <string name="requiredNameOfRoom">Jméno místnosti musí být vyplněno</string>
+    <string name="requiredNameOfShowCase">Jméno vitríny musí být vyplněno</string>
+    <string name="requiredUsername">Uživatelské jméno musí být vyplněno</string>
+    <string name="tooLong">Moc dlouhé</string>
+    <string name="tooShort">Moc krátké</string>
+    <string name="strongerPassword">Heslo musí obsahovat malé a velké písmeno a číslici</string>
+    <string name="requiredEmail">Email musí být vyplněný</string>
+    <string name="notMatchesEmail">Nevalidní emailová adresa</string>
+    <string name="requiredPassword">Heslo musí být vyplněno</string>
+    <string name="passwordDoesntMatch">Hesla se neshodují</string>
+    <string name="change_password">Změnit heslo</string>
+    <string name="change_profile_picture">Změnit profilový obrázek</string>
+    <string name="logout_icon">Ikona odhlášení</string>
+    <string name="favourite_institutions">Oblíbené instituce</string>
+    <string name="password_icon">Ikona změny hesla</string>
+    <string name="profile_line">Čára pod uživatelem</string>
+    <string name="profile_icon">Ikona změny profilového obrázku</string>
+    <string name="favourite_institutions_icon">Ikona oblíbených institucí</string>
+    <string name="language_settings_icon">Ikona nastavení jazyka</string>
 </resources>
