almost final app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,6 @@
     <string name="requiredNameOfExhibitFromList">Vyberte název exponátu ze seznamu</string>
     <string name="translated_text">Přeložený text</string>
     <string name="no_translation">Neexistuje překlad ve vašem jazyce ani v angličtině</string>
+    <string name="upload_failed">Nepodařilo se nahrát exponát</string>
+    <string name="upload_successfull">Nahrání se zdařilo</string>
 </resources>
